[project]
name = "decompai-ida"
version = "0.0.10"
requires-python = ">=3.9"
dependencies = ["aiohttp>=3.10.10", "aiohttp-retry>=2.9.1", "pydantic>=2.9.2", "python-dateutil>=2.9.0.post0", "typing-extensions>=4.12.2", "urllib3>=2.2.3", "anyio>=4.6.2.post1", "more-itertools>=10.5.0", "ida-netnode>=3.0", "exceptiongroup>=1.2.2", "aiostream>=0.6.4"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
